--- a/.gui/style.css
+++ b/.gui/style.css
@@ -30,7 +30,7 @@ h2 {
 body {
 	font-family: sans-serif;
 	margin-bottom: 100px;
-	font-size: 1.25em;
+	font-size: 1.2em;
 }
 
 .dark_code_bg {
@@ -440,4 +440,12 @@ input:checked + .slider .mode-text {
 
 .header_table {
 	margin: 10px;
+}
+
+input, textarea, select {
+	font-size: 1.2em; /* Schriftgröße auf 125% setzen */
+}
+
+input::placeholder, textarea::placeholder {
+	font-size: 1.2em; /* Platzhalter-Schriftgröße auf 125% setzen */
 }
