--- a/.gui/style.css
+++ b/.gui/style.css
@@ -421,6 +421,8 @@ input:checked + .slider .mode-text {
 
 #mainContent {
 	min-width: 1100px;
+	height: fit-content;
+	min-height: 100%;
 }
 
 #share_path {
