--- a/.gui/css/xp.css
+++ b/.gui/css/xp.css
@@ -37,7 +37,8 @@ code,code *{
 }
 
 pre{
-	display: block;padding: 12px 8px;background-color: #000;color: silver;font-size: 1rem;margin: 0
+	display: block;padding: 12px 8px;background-color: #000;color: silver;font-size: 1rem;margin: 0;
+	overflow: scroll;
 }
 
 summary: focus{
