--- a/.gui/style.css
+++ b/.gui/style.css
@@ -350,7 +350,16 @@ a, a:visited, a:active, a:hover, a:link {
 }
 
 #footer_element {
-	height: 30px; background-color: #f8f9fa; padding: 0px; text-align: center; border-top: 1px solid #dee2e6; width: 100%; box-sizing: border-box; position: fixed; bottom: 0; z-index: 2
+	height: 30px;
+	background-color: #f8f9fa;
+	padding: 0px;
+	text-align: center;
+	border-top: 1px solid #dee2e6;
+	width: 100%;
+	box-sizing: border-box;
+	position: fixed;
+	bottom: 0;
+	z-index: 2
 }
 
 .switch {
