--- a/.gui/style.css
+++ b/.gui/style.css
@@ -491,3 +491,35 @@ input:checked + .slider .mode-text {
 .remove_parameter {
 	white-space: pre;
 }
+
+select {
+	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	background-color: #fff;
+	color: #222;
+	padding: 5px 30px 5px 5px; /* Platz für den Pfeil */
+	border: 2px solid #555;
+	border-radius: 5px;
+	cursor: pointer;
+	outline: none;
+	transition: all 0.3s ease;
+	background: linear-gradient(180deg,#fff,#ecebe5 86%,#d8d0c4);
+	background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 6'%3E%3Cpath fill='%23888' d='M0 0l5 6 5-6z'/%3E%3C/svg%3E");
+	background-repeat: no-repeat;
+	background-position: right 10px center;
+	background-size: 12px;
+}
+
+select:hover {
+	border-color: #888;
+}
+
+select:focus {
+	border-color: #4caf50;
+	box-shadow: 0 0 5px rgba(76, 175, 80, 0.5);
+}
+
+select::-ms-expand {
+	display: none;
+}
