--- a/.gui/style.css
+++ b/.gui/style.css
@@ -498,17 +498,17 @@ select {
 	-moz-appearance: none;
 	background-color: #fff;
 	color: #222;
-	padding: 5px 30px 5px 5px; /* Platz für den Pfeil */
-	border: 2px solid #555;
+	padding: 5px 30px 5px 5px;
+	border: 1px solid #555;
 	border-radius: 5px;
 	cursor: pointer;
 	outline: none;
 	transition: all 0.3s ease;
-	background: linear-gradient(180deg,#fff,#ecebe5 86%,#d8d0c4);
-	background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 6'%3E%3Cpath fill='%23888' d='M0 0l5 6 5-6z'/%3E%3C/svg%3E");
-	background-repeat: no-repeat;
-	background-position: right 10px center;
-	background-size: 12px;
+	background:
+		url("data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 6'%3E%3Cpath fill='%23888' d='M0 0l5 6 5-6z'/%3E%3C/svg%3E") 
+		no-repeat right 10px center,
+		linear-gradient(180deg, #fff, #ecebe5 86%, #d8d0c4);
+	background-size: 12px, auto;
 }
 
 select:hover {
