--- a/.gui/style.css
+++ b/.gui/style.css
@@ -875,7 +875,7 @@ input:checked + .slider::before {
 }
 
 .header-logo-group {
-	max-width: 40%;
+	max-width: 180px;
 }
 
 /* --- Responsive Anpassungen --- */
