--- a/.gui/style.css
+++ b/.gui/style.css
@@ -931,3 +931,18 @@ input:checked + .slider::before {
 		flex: 1 1 100%;
 	}
 }
+
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
+.rotate {
+	animation: spin 2s linear infinite;
+	display: inline-block;
+}
