width for mode switcher

--- a/.gui/style.css
+++ b/.gui/style.css
@@ -737,6 +737,7 @@ input:checked + .slider::before {
 		justify-content: center;
 		flex: 1 1 100%;
 		text-align: center;
+		width: inherit;
 	}
 
 	.logo-img {
