always show full width header names in gridjs

--- a/.gui/style.css
+++ b/.gui/style.css
@@ -814,3 +814,7 @@ input:checked + .slider::before {
 input::placeholder {
 	font-family: 'IBM Plex Sans', 'Source Sans Pro', sans-serif;
 }
+
+.gridjs-th-content {
+	overflow: visible !important;
+}
