--- a/.gui/style.css
+++ b/.gui/style.css
@@ -823,3 +823,12 @@ input::placeholder {
 .error_text {
 	color: red;
 }
+
+h3 {
+	margin-top: 2em;
+	font-size: 1.4em;
+	font-weight: bold;
+	color: #333;
+	border-left: 5px solid #ccc;
+	padding-left: 0.5em;
+}
