--- a/.gui/style.css
+++ b/.gui/style.css
@@ -824,9 +824,8 @@ input::placeholder {
 	color: red;
 }
 
-h3 {
+h1, h2, h3, h4, h5, h6 {
 	margin-top: 2em;
-	font-size: 1.4em;
 	font-weight: bold;
 	color: #333;
 	border-left: 5px solid #ccc;
