--- a/.gui/style.css
+++ b/.gui/style.css
@@ -67,7 +67,7 @@ table > tbody > tr:nth-child(even) {
 
 table {
 	border-collapse: collapse;
-	margin: 25px 0;
+	margin: 0 0;
 	min-width: 200px;
 }
 
@@ -827,7 +827,7 @@ input::placeholder {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	margin-top: 2em;
+	margin-top: 1em;
 	font-weight: bold;
 	color: #333;
 	border-left: 5px solid #ccc;
