--- a/.gui/style.css
+++ b/.gui/style.css
@@ -901,3 +901,10 @@ h1, h2, h3, h4, h5, h6 {
 		transform: translateY(0);
 	}
 }
+
+.search_headline {
+	font-weight: bold;
+	margin-top: 1em;
+	margin-bottom: 0.3em;
+	color: #444;
+}
