--- a/.gui/style.css
+++ b/.gui/style.css
@@ -908,3 +908,8 @@ h1, h2, h3, h4, h5, h6 {
 	margin-bottom: 0.3em;
 	color: #444;
 }
+
+#search_share_path {
+	color: black;
+	display: block ruby;
+}
