--- a/.gui/css/xp.css
+++ b/.gui/css/xp.css
@@ -1001,3 +1001,43 @@ progress: not([value]): :-moz-progress-bar: not([value]){
 	animation: sliding 2s linear 0s infinite;
 	background: repeating-linear-gradient(90deg,transparent 0,transparent 8px,#fff 0,#fff 10px,transparent 0,transparent 18px,#fff 0,#fff 20px,transparent 0,transparent 28px,#fff 0,#fff),linear-gradient(180deg,#acedad 0,#7be47d 14%,#4cda50 28%,#2ed330 42%,#42d845 57%,#76e275 71%,#8fe791 85%,#fff)
 }
+
+progress:not([value])::-moz-progress-bar {
+	width: 100%;
+	background: repeating-linear-gradient(90deg,transparent 0,transparent 8px,#fff 0,#fff 10px,transparent 0,transparent 18px,#fff 0,#fff 20px,transparent 0,transparent 28px,#fff 0,#fff),linear-gradient(180deg,#acedad 0,#7be47d 14%,#4cda50 28%,#2ed330 42%,#42d845 57%,#76e275 71%,#8fe791 85%,#fff);
+	animation: sliding 2s linear 0s infinite;
+}
+progress:not([value])::after {
+	box-sizing: border-box;
+	content: "";
+	position: absolute;
+	top: 1px;
+	left: 2px;
+	width: 100%;
+	height: calc(100% - 2px);
+	padding: 1px 2px;
+	border-radius: 2px;
+	background: repeating-linear-gradient(90deg,transparent 0,transparent 8px,#fff 0,#fff 10px,transparent 0,transparent 18px,#fff 0,#fff 20px,transparent 0,transparent 28px,#fff 0,#fff),linear-gradient(180deg,#acedad 0,#7be47d 14%,#4cda50 28%,#2ed330 42%,#42d845 57%,#76e275 71%,#8fe791 85%,#fff);
+}
+progress:not([value])::before {
+	box-sizing: border-box;
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #fff;
+	-webkit-box-shadow: inset 0 0 1px 0 #686868;
+	-moz-box-shadow: inset 0 0 1px 0 #686868;
+}
+Element {
+}
+progress:not([value]) {
+	position: relative;
+}
+progress:not([value]) {
+	-moz-box-shadow: inset 0 0 1px 0 #686868;
+	-webkit-box-shadow: inset 0 0 1px 0 #686868;
+	height: 14px;
+}
