--- a/.gui/style.css
+++ b/.gui/style.css
@@ -1,4 +1,5 @@
 body {
+	font-variant: oldstyle-nums;
 	font-family: 'IBM Plex Sans', 'Source Sans Pro', sans-serif;
 	background-color: #fafafa;
 	text-shadow: 0 0.05em 0.1em rgba(0,0,0,0.2);
