dont print scads bar

--- a/.gui/style.css
+++ b/.gui/style.css
@@ -913,3 +913,9 @@ h1, h2, h3, h4, h5, h6 {
 	display: block ruby;
 	margin-top: 20px;
 }
+
+@media print {
+	#scads_bar {
+		display: none !important;
+	}
+}
