--- a/.gui/css/xp.css
+++ b/.gui/css/xp.css
@@ -1037,3 +1037,9 @@ progress:not([value]) {
 	-webkit-box-shadow: inset 0 0 1px 0 #686868;
 	height: 14px;
 }
+
+button.clicked_button {
+	box-shadow: inset -1px 1px #fff0cf,inset 1px 2px #fdd889,inset -2px 2px #fbc761,inset 2px -2px #e5a01a;
+	box-shadow: none;
+	background: linear-gradient(180deg,#cdcac3,#e3e3db 8%,#e5e5de 94%,#f2f2f1);
+}
