toc not in print

--- a/.gui/style.css
+++ b/.gui/style.css
@@ -876,6 +876,10 @@ h1, h2, h3, h4, h5, h6 {
 	#scads_bar {
 		display: none !important;
 	}
+
+	.toc {
+		display: none !important;
+	}
 }
 
 @media (max-width: 768px) {
